fixed component aligning

--- a/InsightsFrontend/src/app/pages/release-roadmap/release-roadmap.component.scss
+++ b/InsightsFrontend/src/app/pages/release-roadmap/release-roadmap.component.scss
@@ -1,5 +1,5 @@
 .roadmap-container {
-  padding: 8vh 1.5rem 8vh 1.5rem;
+  padding: 10vh 1.5rem 8vh 1.5rem;
   font-family: sans-serif;
   box-sizing: border-box;
   display: flex;
